/***********************************************************************
 X3 ChangeLog

2006-05-16  Neil Spierling  <sirvulcan@gmail.com>

	* Most files: Heh i cant be bothered listing all files, see websvn
	if you want specific files. I just added a new tracking module, its
	just like snoop except it targets specified users. The actual
	commit is in the previous revision, i just forgot to update this to
	tick over the svn version in version output.

2006-05-15  Neil Spierling  <sirvulcan@gmail.com>

	* Most files: Major update off the new release of srvx 1.3.1. Also
	seeing as the new updates dont all have changelog entries ive dropped
	the 2 srvx Changelog files and renamed the X3 one to ChangeLog.

2006-03-20  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: core fix; check if theres a handle_info before looking
	at style...

	* src/helpfile.c: core fix; check if theres a handle_info before looking
	at style...

2006-03-17  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: more clean style changes

2006-03-17  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Added nickserv 'style' setting back. (HomeDawg
	and dhp1080 made me do it)  Needs lots of work to remove ---- 
	headers for 'clean' setting.

	* src/helpfile.c: Added nickserv 'style' stetting back.

	* src/nickserv.help: Added help for set style.

	* src/mod-helpserv.c: make style affect table outputs.

	* src/nickserv.c: Added nickserv 'style' setting back.

	* src/nickserv.h: Added nickserve 'style' setting back.

2006-03-17  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Added conf setting for extended_accounts for
	backward compatability with stock undernet ircd.

	* x3.conf.example: Added conf setting for extended_accounts for
	    backward compatability with stock undernet ircd.

2006-03-06  Alex Schumann  <rubin@afternet.org>
	
	* src/opserv.help: Added missing trace criteria to help, 
	and fixed up a few other bits of help around that topic.
